--- a/vagrant/slurm.conf
+++ b/vagrant/slurm.conf
@@ -1,4 +1,4 @@
-SlurmctldHost=mgmtnode
+SlurmctldHost=headnode
 # PrologFlags=x11
 MpiDefault=none
 ProctrackType=proctrack/linuxproc
@@ -22,7 +22,7 @@ JobCompType=jobcomp/none
 SlurmctldLogFile=/var/log/slurmctld.log
 SlurmdLogFile=/var/log/slurmd.log
 SlurmctldDebug=debug
-PartitionName=debug Nodes=node[00-04] Default=YES MaxTime=INFINITE State=UP PriorityTier=2
+PartitionName=debug Nodes=node[00-01] Default=YES MaxTime=INFINITE State=UP PriorityTier=2
 NodeName=node00 CPUs=4 State=UNKNOWN RealMemory=512
 NodeName=node01 CPUs=4 State=UNKNOWN RealMemory=512
 PriorityType=priority/multifactor
