--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -84,7 +84,9 @@ chown slurm:slurm /var/spool/slurmctld
 
 mkdir /etc/PDSH
 printf 'node00\nnode01\n' > /etc/PDSH/hosts
-export WCOLL=/etc/PDSH/hosts
+
+echo 'PATH=/usr/local/bin/:$PATH' >> /etc/profile
+echo 'WCOLL=/etc/PDSH/hosts' >> /etc/profile
 
 echo "10.10.10.3    headnode" >> /etc/hosts
 echo "10.10.10.4    node00" >> /etc/hosts
@@ -93,7 +95,6 @@ SCRIPT
 
 # extra provisioning script for just the head node
 $headnode_script = <<SCRIPT
-export PATH=/usr/local/bin/:$PATH
 dd if=/dev/random of=/etc/munge/munge.key bs=1024 count=1
 chown munge:munge /etc/munge/munge.key
 chmod 600 /etc/munge/munge.key
@@ -114,11 +115,26 @@ systemctl start slurmdbd.service
 
 sacctmgr -i create cluster cluster
 sacctmgr -i create account cluster_account
-sacctmgr -i create user steve fred account=cluster_account
+sacctmgr -i create user steve account=cluster_account
 
 systemctl start slurmctld
 
 SCRIPT
+
+# headnode: sacctmgr: error: slurm_persist_conn_open_without_init: failed to open persistent connection to localhost:6819: Connection refused
+# headnode: sacctmgr: error: slurmdbd: Sending PersistInit msg: Connection refused
+# headnode: sacctmgr: error: Problem talking to the database: Connection refused
+# headnode: sacctmgr: error: slurm_persist_conn_open_without_init: failed to open persistent connection to localhost:6819: Connection refused
+# headnode: sacctmgr: error: slurmdbd: Sending PersistInit msg: Connection refused
+# headnode: sacctmgr: error: Problem talking to the database: Connection refused
+# headnode: sacctmgr: error: slurm_persist_conn_open_without_init: failed to open persistent connection to localhost:6819: Connection refused
+# headnode: sacctmgr: error: slurmdbd: Sending PersistInit msg: Connection refused
+# headnode: sacctmgr: error: Problem talking to the database: Connection refused
+# headnode: Job for slurmctld.service failed because a configured resource limit was exceeded. See "systemctl status slurmctld.service" and "journalctl -xe" for details.
+
+# troubleshooting;
+# [root@headnode ~]# cat /var/log/messages
+# [root@headnode ~]# cat /var/log/slurmctld.log
 
 Vagrant.configure("2") do |global_config|
     # initial setup of each VM in the cluster
