--- a/lxc/Vagrantfile
+++ b/lxc/Vagrantfile
@@ -12,7 +12,9 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", inline: <<-SHELL
     apt-get update
     apt-get install -y git \
-    wget
+    wget \
+    nano
     snap install lxd --channel=3.0/stable
+    cat /vagrant/lxc.init.yml | lxd init --preseed
   SHELL
 end
