--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -76,12 +76,20 @@ make -j 2 && \
 make install -j 2
 
 # import SLURM config files from Vagrant host
-cp /vm_share/slurm.conf /usr/local/etc/slurm.conf
-cp /vm_share/slurmdbd.conf /usr/local/etc/slurmdbd.conf
+cp /vagrant/slurm.conf /usr/local/etc/slurm.conf
+cp /vagrant/slurmdbd.conf /usr/local/etc/slurmdbd.conf
 
 # import SLURM service files from source
 cp /root/slurm-18.08.8/etc/slurmdbd.service /usr/lib/systemd/system
 cp /root/slurm-18.08.8/etc/slurmctld.service /usr/lib/systemd/system
+
+# reset the system daemon configs and start required services
+systemctl daemon-reload
+
+# import munge key file
+cp /vagrant/munge.key /etc/munge/munge.key
+chown munge:munge /etc/munge/munge.key
+chmod 600 /etc/munge/munge.key
 
 # setup 'slurm' user and required directories
 useradd -m slurm
@@ -110,25 +118,17 @@ SCRIPT
 $headnode_script = <<SCRIPT
 set -xe
 
-# create munge key file
-dd if=/dev/random of=/etc/munge/munge.key bs=1024 count=1
-chown munge:munge /etc/munge/munge.key
-chmod 600 /etc/munge/munge.key
-
-# export the munge key to the host for the nodes to pick up later
-cp -p /etc/munge/munge.key /vm_share/
-
-# reset the system daemon configs and start required services
-systemctl daemon-reload
-
 systemctl enable munge
 systemctl start munge
+sleep 5
+systemctl status munge
 
 systemctl enable slurmdbd.service
 systemctl enable slurmctld.service
 systemctl enable mariadb
 
 systemctl start mariadb
+sleep 5
 systemctl status mariadb
 
 # need to create the slurm database user
@@ -137,6 +137,7 @@ mysql -e "grant all on slurm_acct_db.* TO 'slurm'@'localhost'"
 
 # start the SLURM database service
 systemctl start slurmdbd
+sleep 5
 systemctl status slurmdbd
 
 # wait and then check if the database is available
@@ -150,6 +151,8 @@ sacctmgr -i create user steve account=cluster_account
 
 # finally start the SLURM controller daemon
 systemctl start slurmctld
+sleep 5
+systemctl status slurmctld
 
 SCRIPT
 
@@ -162,6 +165,8 @@ systemctl daemon-reload
 
 systemctl enable munge
 systemctl start munge
+sleep 5
+systemctl status munge
 
 SCRIPT
 
@@ -179,9 +184,6 @@ Vagrant.configure("2") do |global_config|
             config.vm.box = "centos/7"
             config.vm.hostname = "#{name}"
             config.vm.network :private_network, ip: options[:ipaddress]
-            # https://stackoverflow.com/questions/40972345/vagrant-synced-folders-not-working-real-time-on-virtualbox
-            # https://www.vagrantup.com/docs/synced-folders/rsync.html
-            config.vm.synced_folder ".", "/vm_share", type: "rsync-auto"
 
             # VM specifications
             config.vm.provider :virtualbox do |v|
@@ -197,6 +199,14 @@ Vagrant.configure("2") do |global_config|
     # extra provisioning steps for head node
     global_config.vm.define "headnode", primary: true do |headnode|
         headnode.vm.provision :shell, :inline => $headnode_script
+    end
+
+    global_config.vm.define "node00", primary: true do |node00|
+        node00.vm.provision :shell, :inline => $node_script
+    end
+
+    global_config.vm.define "node01", primary: true do |node00|
+        node00.vm.provision :shell, :inline => $node_script
     end
 
 end
