move scontrol provision to Makefile

--- a/vagrant/Makefile
+++ b/vagrant/Makefile
@@ -4,4 +4,7 @@ munge.key:
 	dd if=/dev/random of=munge.key bs=1024 count=1
 
 setup: munge.key
-	vagrant up
+	vagrant up && \
+	vagrant ssh headnode -- -t 'sinfo; \
+	sudo -E env "PATH=/usr/local/bin/:$PATH" scontrol update nodename=node00 state=resume; \
+	sudo -E env "PATH=/usr/local/bin/:$PATH" scontrol update nodename=node01 state=resume; \ sinfo'
