--- a/lxc/slurmdbd.conf
+++ b/lxc/slurmdbd.conf
@@ -18,7 +18,7 @@ AuthType=auth/munge
 # slurmDBD info
 DbdAddr=localhost
 DbdHost=localhost
-#DbdPort=7031
+DbdPort=6819
 SlurmUser=slurm
 #MessageTimeout=300
 DebugLevel=4
@@ -28,11 +28,11 @@ PidFile=/var/run/slurmdbd.pid
 #PluginDir=/usr/lib/slurm
 #PrivateData=accounts,users,usage,jobs
 #TrackWCKey=yes
-#
+
 # Database info
 StorageType=accounting_storage/mysql
-#StorageHost=localhost
+StorageHost=localhost
 #StoragePort=1234
 StoragePass=password
 StorageUser=slurm
-#StorageLoc=slurm_acct_db
+StorageLoc=slurm_acct_db
